--- a/discrete-probability/parts/family.tex
+++ b/discrete-probability/parts/family.tex
@@ -77,6 +77,19 @@
 
 %%%%%%%%%%%%%%%
 \begin{frame}{}
+  \fignocaption{width = 0.55\textwidth}{figs/wlog}
+
+  \centerline{\red{\large Suppose that the older child is a girl:}}
+
+  \pause
+  \[
+    \Pr\set{G_1 \land G_2 \mid G_1 \lor G_2} = \Pr\set{G_1 \land G_2 \mid G_1} = \frac{1}{2}
+  \]
+\end{frame}
+%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%
+\begin{frame}{}
   \[
     \teal{\Pr\set{G_1 \land G_2 \mid G_1 \lor G_2} = \frac{1}{3}}
   \]
@@ -172,14 +185,6 @@
     \pause
     \item I \purple{\textsc{don't know}} them. I just open a room door and see a girl.
   \end{enumerate}
-\end{frame}
-%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%
-\begin{frame}{}
-  \centerline{\teal{\large The Monty-Hall Problem Comes Back}}
-
-  \fignocaption{width = 0.45\textwidth}{figs/monty-hall-problem}
 \end{frame}
 %%%%%%%%%%%%%%%
 
