--- a/discrete-probability/preamble.tex
+++ b/discrete-probability/preamble.tex
@@ -1,6 +1,7 @@
 % File: preamble.tex
 \usepackage{lmodern}
 
+\usepackage{CJKutf8}
 % \usepackage{xeCJK}
 \usetheme{CambridgeUS} % try Pittsburgh
 \usecolortheme{beaver}
@@ -66,3 +67,6 @@
     \fignocaption{width = 0.50\textwidth}{figs/thankyou.png}
   \end{frame}
 }
+
+\usepackage{media9}
+\usepackage{multimedia}
