--- a/discrete-probability/discrete-probability.tex
+++ b/discrete-probability/discrete-probability.tex
@@ -7,7 +7,7 @@
 \subtitle{\it ``Life is a school of probability --- Walter Bagehot''}
 
 \author[Hengfeng Wei]{\large Hengfeng Wei}
-\titlegraphic{\includegraphics[height = 2.0cm]{figs/qrcode-ps-2017-2nd.png}}
+\titlegraphic{\includegraphics[height = 2.0cm]{figs/qrcode-GKP}}
 \institute{hfwei@nju.edu.cn}
 \date{June 07, 2018}
 
@@ -26,7 +26,7 @@
 \input{parts/monty-hall-problem}
 \input{parts/family}
 \input{parts/prob-discussion}
-\input{parts/expectation}
+%% \input{parts/expectation}
 \input{parts/conditional-expectation}
 
 \thankyou{}
